[gd_scene load_steps=8 format=3 uid="uid://b8j2x4q8y5z1"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_script"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_icon"]
size = Vector2(4, 4)

[sub_resource type="Curve" id="Curve_trail"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_run"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/LeftLeg:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.785398, -0.785398, 0.785398]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/RightLeg:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.785398, 0.785398, -0.785398]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual/LeftArm:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.785398, 0.785398, -0.785398]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visual/RightArm:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.785398, -0.785398, 0.785398]
}

[sub_resource type="Animation" id="Animation_idle"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/LeftLeg:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual/RightLeg:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visual/LeftArm:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visual/RightArm:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_player"]
_data = {
"Idle": SubResource("Animation_idle"),
"Run": SubResource("Animation_run")
}

[sub_resource type="RectangleShape2D" id="Rect_Head"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="Rect_Body"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="Rect_Arm"]
size = Vector2(8, 24)

[sub_resource type="RectangleShape2D" id="Rect_Leg"]
size = Vector2(8, 28)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_script")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, -6)
amount = 60
lifetime = 0.8
local_coords = false
emission_shape = 3
emission_rect_extents = Vector2(10, 30)
texture = SubResource("PlaceholderTexture2D_icon")
gravity = Vector2(0, 0)
scale_amount_min = 2.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_trail")
color = Color(0.5, 1, 1, 0.8)

[node name="BloodParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 300
one_shot = true
explosiveness = 1.0
randomness = 0.5
lifetime = 2.0
fixed_fps = 60
local_coords = false
texture = SubResource("PlaceholderTexture2D_icon")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 300.0
scale_amount_min = 0.5
scale_amount_max = 1.5
color = Color(0.8, 0, 0, 1)
collision_mode = 2
collision_friction = 1.0
collision_bounce = 0.0
collision_mask = 1
collision_base_size = 5.0

[node name="Visual" type="Node2D" parent="."]

[node name="RightArm" type="Polygon2D" parent="Visual"]
position = Vector2(0, -10)
color = Color(0, 0.6, 1, 1)
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 20, -4, 20)

[node name="Remote" type="RemoteTransform2D" parent="Visual/RightArm"]
position = Vector2(0, 8)
remote_path = NodePath("../../../Col_Arm_R")
update_scale = false

[node name="RightLeg" type="Polygon2D" parent="Visual"]
position = Vector2(0, 10)
color = Color(0, 0.08, 0.4, 1)
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 24, -4, 24)

[node name="Remote" type="RemoteTransform2D" parent="Visual/RightLeg"]
position = Vector2(0, 10)
remote_path = NodePath("../../../Col_Leg_R")
update_scale = false

[node name="Body" type="Polygon2D" parent="Visual"]
color = Color(0, 0.6, 1, 1)
polygon = PackedVector2Array(-8, -20, 8, -20, 6, 12, -6, 12)

[node name="Remote" type="RemoteTransform2D" parent="Visual/Body"]
position = Vector2(0, -4)
remote_path = NodePath("../../../Col_Body")
update_scale = false

[node name="Head" type="Polygon2D" parent="Visual/Body"]
position = Vector2(0, -28)
color = Color(1, 0.85, 0.75, 1)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="Remote" type="RemoteTransform2D" parent="Visual/Body/Head"]
remote_path = NodePath("../../../../Col_Head")
update_scale = false

[node name="LeftLeg" type="Polygon2D" parent="Visual"]
position = Vector2(0, 10)
color = Color(0, 0.08, 0.4, 1)
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 24, -4, 24)

[node name="Remote" type="RemoteTransform2D" parent="Visual/LeftLeg"]
position = Vector2(0, 10)
remote_path = NodePath("../../../Col_Leg_L")
update_scale = false

[node name="LeftArm" type="Polygon2D" parent="Visual"]
position = Vector2(0, -10)
color = Color(0, 0.6, 1, 1)
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 20, -4, 20)

[node name="Remote" type="RemoteTransform2D" parent="Visual/LeftArm"]
position = Vector2(0, 8)
remote_path = NodePath("../../../Col_Arm_L")
update_scale = false

[node name="Col_Body" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("Rect_Body")

[node name="Col_Head" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("Rect_Head")

[node name="Col_Arm_R" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("Rect_Arm")

[node name="Col_Arm_L" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("Rect_Arm")

[node name="Col_Leg_R" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
shape = SubResource("Rect_Leg")

[node name="Col_Leg_L" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
shape = SubResource("Rect_Leg")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(300, 0)
position_smoothing_enabled = true
drag_vertical_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_player")
}
